[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/beatplayer/test/test.gd" type="Script" id=1]
[ext_resource path="res://addons/beatplayer/test/ch - untitled for beatplayer.ogg" type="AudioStream" id=2]
[ext_resource path="res://addons/beatplayer/beatplayer.gd" type="Script" id=3]
[ext_resource path="res://addons/beatplayer/beatplayer_icon.png" type="Texture" id=4]


[sub_resource type="GDScript" id=1]
script/source = "extends Label

func _on_test_playback_changed(playback, beat):
	text = \"playback: %.3f\" % playback
"

[sub_resource type="GDScript" id=2]
script/source = "extends Label

func _on_test_playback_changed(playback, beat):
	text = \"beat: %.3f\" % beat
"

[sub_resource type="GDScript" id=3]
script/source = "extends LineEdit

func _on_test_beatplayer_changed(beatplayer: BeatPlayer):
	text = str(beatplayer.bpm)
"

[node name="test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BeatPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
bpm = 130.0
offset = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 370.0
margin_right = 467.0
margin_bottom = 600.0

[node name="play_btn" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 97.0
margin_bottom = 20.0
text = "play"

[node name="play_absolute_btn" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 97.0
margin_bottom = 44.0
text = "play absolute"

[node name="stop" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 97.0
margin_bottom = 68.0
text = "stop"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 471.0
margin_right = 592.0
margin_bottom = 600.0

[node name="playback_position" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 121.0
margin_bottom = 14.0
text = "playback_position: "
script = SubResource( 1 )

[node name="beat" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 121.0
margin_bottom = 32.0
text = "beat: "
script = SubResource( 2 )

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 596.0
margin_right = 654.0
margin_bottom = 600.0

[node name="bpm_label" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_right = 58.0
margin_bottom = 14.0
text = "bpm"

[node name="bpm_edit" type="LineEdit" parent="HBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 42.0
script = SubResource( 3 )
[connection signal="beatplayer_changed" from="." to="HBoxContainer/VBoxContainer3/bpm_edit" method="_on_test_beatplayer_changed"]
[connection signal="playback_changed" from="." to="HBoxContainer/VBoxContainer2/playback_position" method="_on_test_playback_changed"]
[connection signal="playback_changed" from="." to="HBoxContainer/VBoxContainer2/beat" method="_on_test_playback_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/play_absolute_btn" to="." method="_on_play_absolute_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/stop" to="." method="_on_stop_pressed"]
[connection signal="text_entered" from="HBoxContainer/VBoxContainer3/bpm_edit" to="." method="_on_bpm_edit_text_entered"]
